Fixes broken link from coreruleset docs

--- a/calico-cloud/threat/web-application-firewall.mdx
+++ b/calico-cloud/threat/web-application-firewall.mdx
@@ -31,7 +31,7 @@ This how-to-guide uses the following {{prodname}} features:
 ### About {{prodname}} WAF
 
 WAF is deployed in your cluster along with Envoy DaemonSet. {{prodname}} proxies selected service traffic through Envoy, checking HTTP requests using the industry-standard 
-[ModSecurity](https://owasp.org/www-project-modsecurity-core-rule-set/) with OWASP CoreRuleSet v3.3.5 modified for kubernetes workloads.
+[ModSecurity](https://owasp.org/www-project-modsecurity-core-rule-set/) with OWASP Core Rule Set v3.3.5 modified for kubernetes workloads.
 <!--To review the rules deployed with the WAF, see [Ruleset files](https://github.com/tigera/operator/tree/master/pkg/render/applicationlayer/embed/coreruleset/rules).-->
 
 You simply enable WAF in Manager UI, and determine the services that you want to enable for WAF protection. By default WAF is set to `DetectionOnly` so no traffic will be denied until you are ready to turn on blocking mode. 
@@ -77,7 +77,7 @@ Enabling WAF for certain system services may result in an undesired cluster stat
   - name: `openshift`, namespace: `default`
   - name: `gatekeeper-webhook-service`, namespace: `gatekeeper-system`
 
-The rules are not overridden during upgrade, you will have to manage deploying updates to the OWASP CoreRuleSet to the cluster over time. 
+The rules are not overridden during upgrade, you will have to manage deploying updates to the OWASP Core Rule Set to the cluster over time.
 
 If you modify the rules, it is recommended to keep your rules in git or similar source control systems.
 
@@ -219,7 +219,7 @@ which then triggers a rolling restart of your L7 pods. This means that the HTTP 
 :::note
 
 It is important to adhere to [CoreRuleset documentation](https://coreruleset.org/docs) on how to edit the behaviour of
- your WAF. A good place to begin at is the [CoreRuleset Quick Start](https://coreruleset.org/docs/deployment/quick_start/).
+ your WAF. A good place to begin at is the [Installing Core Rule Set](https://coreruleset.org/docs/deployment/install/).
 
 In many scenarios, the default example CRS configuration will be a good enough starting point. It is recommended to review the example configuration file before 
 you deploy it to make sure it’s right for your environment.
@@ -270,7 +270,7 @@ The lower the overall anomaly scoring threshold value is, the more likely it is 
 
 #### Change other default settings
 
-The CoreRuleSet has several default values and settings that you can fine-tune. Example: Rule 920420 checks the HTTP request Content-Type header against a list of allowed values. You may want to allow traffic through the WAF that has a certain Content-Type that is not allowed by default, e.g. you may have Content-Types in your micro-services workloads that are not allowed by default. 
+Core Rule Set has several default values and settings that you can fine-tune. Example: Rule 920420 checks the HTTP request Content-Type header against a list of allowed values. You may want to allow traffic through the WAF that has a certain Content-Type that is not allowed by default, e.g. you may have Content-Types in your micro-services workloads that are not allowed by default.
 
 1. Edit the `crs-setup.conf` file and add a new Content-Type by modifying `id:900220` and appending to the default list named `tx.allowed_request_content_type`
 
