--- a/calico-enterprise_versioned_docs/version-3.17/threat/web-application-firewall.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/threat/web-application-firewall.mdx
@@ -214,7 +214,7 @@ which then triggers a rolling restart of your L7 pods. This means that the HTTP 
 :::note
 
 It is important to adhere to [CoreRuleset documentation](https://coreruleset.org/docs) on how to edit the behaviour of
- your WAF. A good place to begin at is the [CoreRuleset Quick Start](https://coreruleset.org/docs/deployment/quick_start/).
+ your WAF. A good place to begin at is the [Installing Core Rule Set](https://coreruleset.org/docs/deployment/install/).
 
 In many scenarios, the default example CRS configuration will be a good enough starting point. It is recommended to review the example configuration file before 
 you deploy it to make sure it’s right for your environment.
