Add windows images to CC private registry

--- a/calico-cloud_versioned_docs/version-18-2/get-started/connect/setup-private-registry.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/get-started/connect/setup-private-registry.mdx
@@ -92,6 +92,9 @@ quay.io/tigera/cc-core:v0.2.3
 quay.io/tigera/prometheus-operator:v3.18.0-2.0
 quay.io/tigera/prometheus-config-reloader:v3.18.0-2.0
 quay.io/tigera/cc-cni-config-scanner:v0.1
+quay.io/tigera/fluentd-windows:v3.18.0-2.0
+quay.io/tigera/cnx-node-windows:v3.18.0-2.0
+quay.io/tigera/cni-windows:v3.18.0-2.0
 )
 ```
 
