--- a/calico-cloud/get-started/connect/setup-private-registry.mdx
+++ b/calico-cloud/get-started/connect/setup-private-registry.mdx
@@ -51,47 +51,50 @@ helm repo add calico-cloud {{clouddownloadbase}}/charts
 INSTALLER_IMAGE="{{cloudoperatorimage}}:$(helm show chart calico-cloud/calico-cloud | grep version: | sed -e 's/version: *//' -e 's/+/-g/')"
 IMAGES=(
 $INSTALLER_IMAGE
-quay.io/tigera/operator:v1.31.2
-quay.io/tigera/cnx-apiserver:v3.18.0-1.1
-quay.io/tigera/compliance-benchmarker:v3.18.0-1.1
-quay.io/tigera/compliance-controller:v3.18.0-1.1
-quay.io/tigera/compliance-reporter:v3.18.0-1.1
-quay.io/tigera/compliance-snapshotter:v3.18.0-1.1
-quay.io/tigera/deep-packet-inspection:v3.18.0-1.1
-quay.io/tigera/fluentd:v3.18.0-1.1
-quay.io/tigera/guardian:v3.18.0-1.1
-quay.io/tigera/intrusion-detection-controller:v3.18.0-1.1
-quay.io/tigera/packetcapture:v3.18.0-1.1
-quay.io/tigera/policy-recommendation:v3.18.0-1.1
-quay.io/tigera/egress-gateway:v3.18.0-1.1
-quay.io/tigera/l7-collector:v3.18.0-1.1
-quay.io/tigera/envoy:v3.18.0-1.1
-quay.io/tigera/prometheus:v3.18.0-1.1
-quay.io/tigera/prometheus-service:v3.18.0-1.1
-quay.io/tigera/alertmanager:v3.18.0-1.1
-quay.io/tigera/cnx-queryserver:v3.18.0-1.1
-quay.io/tigera/kube-controllers:v3.18.0-1.1
-quay.io/tigera/cnx-node:v3.18.0-1.1
-quay.io/tigera/typha:v3.18.0-1.1
-quay.io/tigera/cni:v3.18.0-1.1
-quay.io/tigera/cloud-controllers:v3.18.0-1.1
-quay.io/tigera/es-gateway:v3.18.0-1.1
-quay.io/tigera/linseed:v3.18.0-1.1
-quay.io/tigera/dikastes:v3.18.0-1.1
-quay.io/tigera/pod2daemon-flexvol:v3.18.0-1.1
-quay.io/tigera/csi:v3.18.0-1.1
-quay.io/tigera/node-driver-registrar:v3.18.0-1.1
-quay.io/tigera/key-cert-provisioner:v1.1.13
-quay.io/tigera/image-assurance-admission-controller:v1.10.11
-quay.io/tigera/image-assurance-operator:v1.10.11
-quay.io/tigera/image-assurance-container-runtime-adaptor:v1.10.11
-quay.io/tigera/image-assurance-cluster-scanner:v1.10.11
-quay.io/tigera/runtime-security-operator:v1.10.0
-quay.io/tigera/skimble:v1.10.0
-quay.io/tigera/cc-core:v0.1.8
-quay.io/tigera/prometheus-operator:v3.18.0-1.1
-quay.io/tigera/prometheus-config-reloader:v3.18.0-1.1
+quay.io/tigera/operator:v1.32.2
+quay.io/tigera/cnx-apiserver:v3.18.0-2.0
+quay.io/tigera/compliance-benchmarker:v3.18.0-2.0
+quay.io/tigera/compliance-controller:v3.18.0-2.0
+quay.io/tigera/compliance-reporter:v3.18.0-2.0
+quay.io/tigera/compliance-snapshotter:v3.18.0-2.0
+quay.io/tigera/deep-packet-inspection:v3.18.0-2.0
+quay.io/tigera/fluentd:v3.18.0-2.0
+quay.io/tigera/guardian:v3.18.0-2.0
+quay.io/tigera/intrusion-detection-controller:v3.18.0-2.0
+quay.io/tigera/packetcapture:v3.18.0-2.0
+quay.io/tigera/policy-recommendation:v3.18.0-2.0
+quay.io/tigera/egress-gateway:v3.18.0-2.0
+quay.io/tigera/l7-collector:v3.18.0-2.0
+quay.io/tigera/envoy:v3.18.0-2.0
+quay.io/tigera/prometheus:v3.18.0-2.0
+quay.io/tigera/prometheus-service:v3.18.0-2.0
+quay.io/tigera/alertmanager:v3.18.0-2.0
+quay.io/tigera/cnx-queryserver:v3.18.0-2.0
+quay.io/tigera/kube-controllers:v3.18.0-2.0
+quay.io/tigera/cnx-node:v3.18.0-2.0
+quay.io/tigera/typha:v3.18.0-2.0
+quay.io/tigera/cni:v3.18.0-2.0
+quay.io/tigera/cloud-controllers:v3.18.0-2.0
+quay.io/tigera/es-gateway:v3.18.0-2.0
+quay.io/tigera/linseed:v3.18.0-2.0
+quay.io/tigera/dikastes:v3.18.0-2.0
+quay.io/tigera/pod2daemon-flexvol:v3.18.0-2.0
+quay.io/tigera/csi:v3.18.0-2.0
+quay.io/tigera/node-driver-registrar:v3.18.0-2.0
+quay.io/tigera/key-cert-provisioner:v1.1.15
+quay.io/tigera/image-assurance-admission-controller:v1.13.0
+quay.io/tigera/image-assurance-operator:v1.13.0
+quay.io/tigera/image-assurance-container-runtime-adaptor:v1.13.0
+quay.io/tigera/image-assurance-cluster-scanner:v1.13.0
+quay.io/tigera/runtime-security-operator:v1.13.1
+quay.io/tigera/skimble:v1.13.1
+quay.io/tigera/cc-core:v0.2.3
+quay.io/tigera/prometheus-operator:v3.18.0-2.0
+quay.io/tigera/prometheus-config-reloader:v3.18.0-2.0
 quay.io/tigera/cc-cni-config-scanner:v0.1
+quay.io/tigera/fluentd-windows:v3.18.0-2.0
+quay.io/tigera/cnx-node-windows:v3.18.0-2.0
+quay.io/tigera/cni-windows:v3.18.0-2.0
 )
 ```
 
