Reword release notes update -> release

--- a/calico_versioned_docs/version-3.27/release-notes/index.mdx
+++ b/calico_versioned_docs/version-3.27/release-notes/index.mdx
@@ -117,7 +117,7 @@ December 18, 2023
 
 Calico Open Source release 3.27.0 is now generally available.
 
-### Calico Open Source 3.27.2 bux fix update
+### Calico Open Source 3.27.2 bux fix release
 
 February 16, 2024
 
