--- a/calico_versioned_docs/version-3.27/release-notes/index.mdx
+++ b/calico_versioned_docs/version-3.27/release-notes/index.mdx
@@ -117,19 +117,9 @@ December 18, 2023
 
 Calico Open Source release 3.27.0 is now generally available.
 
-### Calico Open Source 3.27.2 bux fix release
+### Calico Open Source 3.27.2 bug fix release
 
 February 16, 2024
-
-#### Bug fixes
-
- - Added retry mechanism to Windows version retrieval in install-cni to address possible panics when the OS is not ready. [calico #8466](https://github.com/projectcalico/calico/pull/8466) (@coutinhop)
- - ebpf: fixes possible holes in the list NAT backends if there is a terminating pod. [calico #8460](https://github.com/projectcalico/calico/pull/8460) (@tomastigera)
- - ebpf: fixed pods in nat-outgoing should not SNAT when accessing local host [calico #8458](https://github.com/projectcalico/calico/pull/8458) (@tomastigera)
- - ebpf: fixed leakage of nodeport healthcheck servers [calico #8457](https://github.com/projectcalico/calico/pull/8457) (@tomastigera)
- - ebpf: don't stumble on unknown prog types passed as int in json [calico #8456](https://github.com/projectcalico/calico/pull/8456) (@tomastigera)
- - Only program failsafe rules for IP version of the CIDR [calico #8455](https://github.com/projectcalico/calico/pull/8455) (@tomastigera)
- - Fix confd issues when running on Windows operator installations (using HPC). [calico #8422](https://github.com/projectcalico/calico/pull/8422) (@coutinhop)
 
 #### Enhancements
 
@@ -144,6 +134,16 @@ February 16, 2024
  - Felix now avoids accessing non-Calico IP sets. This reduces the scope for IP set compatibility errors when another app has created an IP set that Calico's version of IP set can't parse. [calico #8412](https://github.com/projectcalico/calico/pull/8412) (@mazdakn)
  - Remove spammy BIRD log about ignoring DOWN interfaces [calico #8401](https://github.com/projectcalico/calico/pull/8401) (@lbogdan)
  - Skip apiserver etcd3 healthcheck and disable profiling [calico #8396](https://github.com/projectcalico/calico/pull/8396) (@hjiawei)
+
+#### Bug fixes
+
+ - Added retry mechanism to Windows version retrieval in install-cni to address possible panics when the OS is not ready. [calico #8466](https://github.com/projectcalico/calico/pull/8466) (@coutinhop)
+ - ebpf: fixes possible holes in the list NAT backends if there is a terminating pod. [calico #8460](https://github.com/projectcalico/calico/pull/8460) (@tomastigera)
+ - ebpf: fixed pods in nat-outgoing should not SNAT when accessing local host [calico #8458](https://github.com/projectcalico/calico/pull/8458) (@tomastigera)
+ - ebpf: fixed leakage of nodeport healthcheck servers [calico #8457](https://github.com/projectcalico/calico/pull/8457) (@tomastigera)
+ - ebpf: don't stumble on unknown prog types passed as int in json [calico #8456](https://github.com/projectcalico/calico/pull/8456) (@tomastigera)
+ - Only program failsafe rules for IP version of the CIDR [calico #8455](https://github.com/projectcalico/calico/pull/8455) (@tomastigera)
+ - Fix confd issues when running on Windows operator installations (using HPC). [calico #8422](https://github.com/projectcalico/calico/pull/8422) (@coutinhop)
 
 #### How to update
 
