DOCS-2095: More fixes for bad manifest links

--- a/calico-enterprise_versioned_docs/version-3.19-1/getting-started/install-on-clusters/kubernetes/generic-install.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/getting-started/install-on-clusters/kubernetes/generic-install.mdx
@@ -2,6 +2,8 @@
 description: Install Calico Enterprise on a kubeadm-provisioned Kubernetes cluster for on-premises deployments.
 ---
 
+import InstallGenericTemp from '@site/calico-enterprise_versioned_docs/version-3.19-1/_includes/components-temp/InstallGeneric-temp';
+
 # Standard
 
 ## Big picture
@@ -32,7 +34,7 @@ The geeky details of what you get:
 - [Install {{prodname}}](#install-calico-enterprise)
 - [Install {{prodname}} license](#install-calico-enterprise-license)
 
-<InstallGeneric clusterType='standalone' />
+<InstallGenericTemp clusterType='standalone' />
 
 ## Next steps
 
