--- a/calico-enterprise_versioned_docs/version-3.19-1/getting-started/install-on-clusters/windows-calico/operator.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/getting-started/install-on-clusters/windows-calico/operator.mdx
@@ -2,6 +2,8 @@
 description: Install Calico Enterprise for Windows on a Kubernetes cluster for testing or development.
 ---
 
+import CalicoWindowsInstallTemp from '@site/calico-enterprise_versioned_docs/version-3.19-1/_includes/components-temp/CalicoWindowsInstall-temp';
+
 # Install using Operator
 
 import Tabs from '@theme/Tabs';
@@ -102,12 +104,12 @@ Before proceeding, take note of the configuration parameters in `{{rootDirWindow
 <Tabs>
 <TabItem label="Kubernetes VXLAN" value="Kubernetes VXLAN-4">
 
-<CalicoWindowsInstall networkingType='vxlan' />
+<CalicoWindowsInstallTemp networkingType='vxlan' />
 
 </TabItem>
 <TabItem label="Kubernetes BGP" value="Kubernetes BGP-5">
 
-<CalicoWindowsInstall networkingType='windows-bgp' />
+<CalicoWindowsInstallTemp networkingType='windows-bgp' />
 
 </TabItem>
 </Tabs>
