--- a/calico-enterprise_versioned_docs/version-3.19-1/getting-started/install-on-clusters/gke.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/getting-started/install-on-clusters/gke.mdx
@@ -2,6 +2,8 @@
 description: Enable Calico network policy in GKE.
 ---
 
+import InstallGKETemp from '@site/calico-enterprise_versioned_docs/version-3.19-1/_includes/components-temp/InstallGKE-temp.js';
+
 # Google Kubernetes Engine (GKE)
 
 ## Big picture
@@ -56,7 +58,7 @@ The geeky details of what you get:
 1. [Install {{prodname}}](#install-calico-enterprise)
 1. [Install the {{prodname}} license](#install-the-calico-enterprise-license)
 
-<InstallGKE clusterType='standalone' />
+<InstallGKETemp clusterType='standalone' />
 
 ## Next steps
 
