--- a/calico-enterprise_versioned_docs/version-3.19-1/getting-started/install-on-clusters/openshift/installation.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/getting-started/install-on-clusters/openshift/installation.mdx
@@ -2,6 +2,9 @@
 description: Install Calico Enterprise on an OpenShift 4 cluster.
 ---
 
+import InstallOpenshiftBeforeYouBeginTemp from '@site/calico-enterprise_versioned_docs/version-3.19-1/_includes/components-temp/InstallOpenshiftBeforeYouBegin-temp';
+import InstallOpenShiftTemp from '@site/calico-enterprise_versioned_docs/version-3.19-1/_includes/components-temp/InstallOpenShift-temp';
+
 # Install Calico Enterprise on OpenShift
 
 ## Big picture
@@ -12,7 +15,7 @@ This guide augments the applicable steps in the [OpenShift documentation](https:
 
 ## Before you begin
 
-<InstallOpenshiftBeforeYouBegin />
+<InstallOpenshiftBeforeYouBeginTemp />
 
 ## How to
 
@@ -25,7 +28,7 @@ This guide augments the applicable steps in the [OpenShift documentation](https:
 1. [Create a storage class](#create-a-storage-class)
 1. [Install the {{prodname}} license](#install-the-calico-enterprise-license)
 
-<InstallOpenShift clusterType='standalone' />
+<InstallOpenShiftTemp clusterType='standalone' />
 
 ## Next steps
 
