--- a/calico-enterprise_versioned_docs/version-3.19-1/getting-started/install-on-clusters/tkg.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/getting-started/install-on-clusters/tkg.mdx
@@ -2,6 +2,8 @@
 description: Install Calico Enterprise on Tanzu Kubernetes Grid.
 ---
 
+import InstallGenericTemp from '@site/calico-enterprise_versioned_docs/version-3.19-1/_includes/components-temp/InstallGeneric-temp';
+
 # Tanzu Kubernetes Grid (TKG)
 
 ## Big picture
@@ -40,7 +42,7 @@ The geeky details of what you get:
 - [Install {{prodname}}](#install-calico-enterprise)
 - [Install {{prodname}} license](#install-calico-enterprise-license)
 
-<InstallGeneric clusterType='standalone' />
+<InstallGenericTemp clusterType='standalone' />
 
 ## Next steps
 
