--- a/calico-enterprise_versioned_docs/version-3.19-1/getting-started/upgrading/upgrading-enterprise/openshift-upgrade.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/getting-started/upgrading/upgrading-enterprise/openshift-upgrade.mdx
@@ -2,6 +2,9 @@
 description: Upgrade to a newer version of Calico Enterprise installed with OpenShift.
 ---
 
+import InstallOpenShiftManifestsTemp from '@site/calico-enterprise_versioned_docs/version-3.19-1/_includes/components-temp/InstallOpenShiftManifests-temp';
+import OpenShiftPrometheusOperatorTemp from '@site/calico-enterprise_versioned_docs/version-3.19-1/_includes/components-temp/OpenShiftPrometheusOperator-temp';
+
 # Upgrade Calico Enterprise installed with OpenShift
 
 :::note
@@ -65,7 +68,7 @@ Make a manifests directory.
 mkdir manifests
 ```
 
-<InstallOpenShiftManifests upgradeFrom='Enterprise' />
+<InstallOpenShiftManifestsTemp upgradeFrom='Enterprise' />
 
 # Upgrade from 3.0 or later
 
@@ -81,7 +84,7 @@ The steps differ based on your cluster type. If you are unsure of your cluster t
    oc apply --server-side --force-conflicts -f manifests/
    ```
 
-1. <OpenShiftPrometheusOperator operation='upgrade' />
+1. <OpenShiftPrometheusOperatorTemp operation='upgrade' />
 
 1. If your cluster is a management cluster, apply a [ManagementCluster](../../../reference/installation/api.mdx#operator.tigera.io/v1.ManagementCluster)
    CR to your cluster.
