--- a/calico-enterprise_versioned_docs/version-3.17/getting-started/install-on-clusters/private-registry/private-registry-regular.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/getting-started/install-on-clusters/private-registry/private-registry-regular.mdx
@@ -10,7 +10,7 @@ Move Calico Enterprise container images to a private registry and configure {{pr
 
 ## Value
 
-Install Calico Enterprise in clusters where pulling from third party private repos is not an option, such as airgapped clusters, or clusters with bandwidth constraints or security constraints.
+Install Calico Enterprise in clusters where pulling from third party private repos is not an option, such as air-gapped clusters, or clusters with bandwidth constraints or security constraints.
 
 ## Concepts
 
