--- a/calico-enterprise_versioned_docs/version-3.18/operations/ebpf/install.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/operations/ebpf/install.mdx
@@ -388,7 +388,7 @@ kubectl patch networks.operator.openshift.io cluster --type merge -p '{"spec":{"
 </TabItem>
 <TabItem label="AKS" value="AKS-13">
 
-AKS with Azure CNI does not allow `kube-proxy` to be disabled, `kube-proxy` is deployed by the addon manager, which will reconcile
+AKS with Azure CNI does not allow `kube-proxy` to be disabled, `kube-proxy` is deployed by the add-on manager, which will reconcile
 away any manual changes made to its configuration. To ensure `kube-proxy` and {{prodname}} don't fight, set
 the Felix configuration parameter `bpfKubeProxyIptablesCleanupEnabled` to false. This can be done with
 `kubectl` as follows:
