--- a/calico_versioned_docs/version-3.25/getting-started/kubernetes/hardway/configure-bgp-peering.mdx
+++ b/calico_versioned_docs/version-3.25/getting-started/kubernetes/hardway/configure-bgp-peering.mdx
@@ -13,7 +13,7 @@ operating at the IP layer (layer 3). In that situation, we would need to peer ea
 with its corresponding ToR router, so that the ToR learns routes to the containers. That
 configuration is beyond the scope of this guide.
 
-Since we are running in an AWS VPC within a single subnet, the hosts have ethernet (layer 2)
+Since we are running in an AWS VPC within a single subnet, the hosts have Ethernet (layer 2)
 connectivity with one another, meaning there are no routers between them. Thus, they can peer
 directly with each other.
 
