--- a/calico_versioned_docs/version-3.25/networking/determine-best-networking.mdx
+++ b/calico_versioned_docs/version-3.25/networking/determine-best-networking.mdx
@@ -98,7 +98,7 @@ BGP (Border Gateway Protocol) is a standards based networking protocol for shari
 
 **{{prodname}} CNI network plugin**
 
-The {{prodname}} CNI network plugin connects pods to the host network namespace’s L3 routing using a pair of virtual ethernet devices (veth pair). This L3 architecture avoids the unnecessary complexity and performance overheads of additional L2 bridges that feature in many other Kubernetes networking solutions.
+The {{prodname}} CNI network plugin connects pods to the host network namespace’s L3 routing using a pair of virtual Ethernet devices (veth pair). This L3 architecture avoids the unnecessary complexity and performance overheads of additional L2 bridges that feature in many other Kubernetes networking solutions.
 
 **{{prodname}} CNI IPAM plugin**
 
