--- a/calico_versioned_docs/version-3.25/operations/image-options/alternate-registry.mdx
+++ b/calico_versioned_docs/version-3.25/operations/image-options/alternate-registry.mdx
@@ -14,7 +14,7 @@ Configure {{prodname}} to pull images from a registry (public or private).
 
 In many deployments, installing {{prodname}} in clusters from third-party private repos is not an option. {{prodname}} offers these public and private registry options, which can be used in any combination:
 
-- **Install from a registry** for use cases like airgapped clusters, or clusters with bandwidth or security constraints
+- **Install from a registry** for use cases like air-gapped clusters, or clusters with bandwidth or security constraints
 - **Install from an image path in a registry** if you have pulled {{prodname}} images to a sub path in your registry
 - [Install images by registry digest](imageset.mdx)
 
