[BPF] document BPFConnectTimeLoadBalancing and BPFHostNetworkedNATWithoutCTLB (#1307)
Co-authored-by: Christopher Tauchen <tauchen@gmail.com>

--- a/calico_versioned_docs/version-3.27/reference/felix/configuration.mdx
+++ b/calico_versioned_docs/version-3.27/reference/felix/configuration.mdx
@@ -101,12 +101,6 @@ The full list of parameters which can be set is as follows.
 | `FeatureDetectOverride`             | `FELIX_FEATUREDETECTOVERRIDE`             | Is used to override the feature detection. Values are specified in a comma separated list with no spaces, example; "SNATFullyRandom=true,MASQFullyRandom=false,RestoreSupportsLock=true,IPIPDeviceIsL3=true. "true" or "false" will force the feature, empty or omitted values are auto-detected. [Default: `""`]                                                                                                                                                                                                                                                                                                                                                                                                                | string                                                                                          |
 | `FeatureGates`			| `FELIX_FEATUREGATES`			| Is used to enable or disable tech-preview Calico features. Values are specified in a comma separated list with no spaces. This is used to enable features that are not fully production ready. Example; "AbC=enabled,XyZ=false" [Default: not set] | string
 
-#### Feature Gates
-
-* `BPFConnectTimeLoadBalancingWorkaround` - Use when connect-time loadblalancer (CTLB) is turned off or if you want to turn it off for UDP only. When CTLB is turned off, host networked processes cannot always reach services. This workaround makes sure that they can. When CTLB is turned on, UDP clients may get stuck sending traffic to endpoint that does not exist anymore. So CTLB needs to be turned off sometimes.
-	* `enabled` - when CTLB is turned off make sure that services are always accessible.
-	* `udp` - turns off CTLB for UDP only and makes sure that services are always accessible. Preferred setting to make sure that DNS works.
-
 ### etcd datastore configuration
 
 | Configuration parameter | Environment variable  | Description                                                                                                                                                                                                                                                                                                                                                                                                                 | Schema                           |
@@ -169,6 +163,8 @@ See the [HOWTO guide](../../operations/ebpf/enabling-ebpf.mdx) for step-by step 
 | BPFDataIfacePattern / <br/> FELIX_BPFDATAIFACEPATTERN                               | Controls which interfaces Felix should attach BPF programs to catch traffic to/from the external network. This needs to match the interfaces that Calico workload traffic flows over as well as any interfaces that handle incoming traffic to NodePorts and services from outside the cluster. It should not match the workload interfaces (usually named cali...).. | regular expression    | ^((en&#124;wl&#124;ww&#124;sl&#124;ib) [Popsvx]&#46;&#124;&#42; &#124;(eth &#124;wlan &#124;wwan)&#46;&#124;&#42;&#124;tunl0$ &#124; vxlan.calico$ &#124; wireguard.cali$ &#124; wg-v6.cali$) |
 | BPFL3IfacePattern / <br/> FELIX_BPFL3IFACEPATTERN                                   | Allows to list tunnel devices like wireguard or vxlan (i.e., L3 devices) in addition to BPFDataIfacePattern. That is, tunnel interfaces not created by Calico, that Calico workload traffic flows over as well as any interfaces that handle incoming traffic to nodeports and services from outside the cluster.                                                                 | regular expression    | ""      |
 | BPFConnectTimeLoadBalancingEnabled / <br/> FELIX_BPFCONNECTTIMELOADBALANCINGENABLED | Controls whether Felix installs the connect-time load balancer. In the current release, the connect-time load balancer is required for the host to reach kubernetes services.                                                                                                                                                                                                     | true,false            | true    |
+| BPFConnectTimeLoadBalancing / <br/> FELIX_BPFCONNECTTIMELOADBALANCING               | Controls whether Felix installs the connect-time load balancer.  It improves the performance of pod-to-service connections. When set to TCP (default), connect-time load balancing is available only for services with TCP ports. If set to Enabled, it is enabled for any protocol - with that, UDP applications may keep sending data to a service (e.g., DNS) backend that does not exist anymore. When set to Disabled or TCP, bpfHostNetworkedNATWithoutCTLB must be set to Enabled for host networked processed to be able to reach all service correctly. If ebpf is used with a service mesh that uses sidecars like Istio, set this option to Disabled and bpfHostNetworkedNATWithoutCTLB to Enabled (default). That allows the mesh to intercept service IPs before they get resolved.                                                                                                        | TCP,Enabled,Disabled  | TCP     |
+| BPFHostNetworkedNATWithoutCTLB / <br/> FELIX_BPFHOSTNETWORKEDNATWITHOUTCTLB         | In eBPF dataplane mode, controls whether Felix resolves service (NAT) without CTLB for host networked processes. This along with BPFConnectTimeLoadBalancing determines the behavior of connect-time load balancer.                                                                                                                                                               | Enabled,Disabled      | Enabled |
 | BPFExternalServiceMode / <br/> FELIX_BPFEXTERNALSERVICEMODE                         | Controls how traffic from outside the cluster to NodePorts and ClusterIPs is handled. In Tunnel mode, packet is tunneled from the ingress host to the host with the backing pod and back again. In DSR mode, traffic is tunneled to the host with the backing pod and then returned directly; this requires a network that allows direct return.                                  | Tunnel,DSR            | Tunnel  |
 | BPFDSROptoutCIDRs / <br/> FELIX_BPFDSROPTOUTCIDRS                                   | BPFDSROptoutCIDRs is a list of CIDRs that are excluded from DSR. That is, clients in those CIDRs will access nodeports as if BPFExternalServiceMode was set to Tunnel.                                                                                                                                                                                                            | string                | ""      |
 | BPFExtToServiceConnmark / <br/> FELIX_BPFEXTTOSERVICECONNMARK                       | Controls a 32bit mark that is set on connections from an external client to a local service. This mark allows us to control how packets of that connection are routed within the host and how is routing interpreted by RPF check.                                                                                                                                                | int                   | 0       |
