DOCS-2108: Adds notes from CE 3.19-1

--- a/calico-cloud_versioned_docs/version-19-1/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-19-1/release-notes/index.mdx
@@ -9,6 +9,27 @@ title: Release notes
 
 ### New features and enhancements
 
+#### Improved flow log filtering for destination domains
+
+We’ve updated the Felix parameter (`dest_domains`) for DNS policy to make it easy to find only domain names that the deployment connected to (not all the domain names that got translated to the same IP address).
+For more information, see [Flow log data types](../visibility/elastic/flow/datatypes.mdx).
+
+#### New flow logs panel on Endpoints page
+
+We've updated the Endpoints page in Manager UI with a new flow logs panel so you can view and filter Endpoints associated with denied traffic. Flow log metadata includes the source, destination, ports, protocols, and other key forms. We've also updated the Policy Board to highlight policies with denied traffic.
+
+#### Improvements to security events dashboard
+
+We've added the following improvements to the [Security events dashboard](../threat/security-event-management):
+
+- Jira and Slack webhook integration for security event alerts
+
+By [configuring security event alerts](../threat/configuring-webhooks), you can push alerts from the Security Overview dashboard in Manager UI to Jira and Slack. This feature allows incident response and security teams to use native tools to respond to security event alerts.
+
+- Added threat feed alerts
+
+If you have implemented global threat feeds for suspicious activity (domains or suspicious IPs), alerts are now visible in the Security Overview dashboard. For more information on threat feeds, see [Trace and block suspicious IPs](../threat/suspicious-ips).
+
 ### Deprecated and removed features
 
 ### Bug fixes
