add helm customization reference

--- a/calico/getting-started/kubernetes/helm.mdx
+++ b/calico/getting-started/kubernetes/helm.mdx
@@ -68,13 +68,7 @@ If you are installing on a cluster installed by EKS, GKE, AKS or Mirantis Kubern
    EOF
    ```
 
-1. Add any other customizations you require to `values.yaml`. You might like to refer to the [helm docs](https://helm.sh/docs/) or run
-
-   ```
-   helm show values projectcalico/tigera-operator --version {{releaseTitle}}
-   ```
-
-   to see the values that can be customized in the chart.
+For more information about configurable options via `values.yaml` please see [Helm installation reference](../../reference/installation/helm_customization).
 
 ### Install {{prodname}}
 
